Fix live chat overflow

--- a/packages/app/src/Element/LiveChat.css
+++ b/packages/app/src/Element/LiveChat.css
@@ -1,5 +1,5 @@
 .live-chat {
-  height: 100%;
+  height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
 }
